[gd_scene load_steps=13 format=3 uid="uid://3oirhhef1tco"]

[ext_resource type="PackedScene" uid="uid://msr6uxuna4wu" path="res://Scenes/Game/Characters/Pong/paddle.tscn" id="1_3foig"]
[ext_resource type="Script" path="res://Scenes/Game/Levels/Player.gd" id="2_0qg2f"]
[ext_resource type="PackedScene" uid="uid://do2ydtud6pvod" path="res://Scenes/Game/Characters/Pong/ball.tscn" id="2_1gtun"]
[ext_resource type="Texture2D" uid="uid://dk5vn0rd1m1xm" path="res://Assets/2D Art/Pong/separator.png" id="2_1jpwc"]
[ext_resource type="Script" path="res://Scenes/Game/Characters/Pong/ball.gd" id="3_qdwue"]
[ext_resource type="Script" path="res://Scenes/Game/Characters/Pong/ball_collision_logic.gd" id="5_cgjrc"]
[ext_resource type="FontFile" uid="uid://7kk4yqg6nmxs" path="res://Assets/m5x7.ttf" id="7_yy80t"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vbcql"]
radius = 5.0

[sub_resource type="GradientTexture1D" id="GradientTexture1D_s8fq0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y4g73"]
size = Vector2(1174, 44)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_i4w21"]
normal = Vector2(0.445004, -0.895528)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_vbesr"]
normal = Vector2(1, 0)

[node name="Pong" type="Node2D"]

[node name="Player" parent="." instance=ExtResource("1_3foig")]
modulate = Color(0, 0.882353, 0, 1)
position = Vector2(50, 333)
script = ExtResource("2_0qg2f")

[node name="AI" parent="." instance=ExtResource("1_3foig")]
position = Vector2(1100, 333)

[node name="Ball" parent="." instance=ExtResource("2_1gtun")]
top_level = true
position = Vector2(576, 333)
motion_mode = 1
script = ExtResource("3_qdwue")

[node name="Area2D2" type="Area2D" parent="Ball"]
script = ExtResource("5_cgjrc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball/Area2D2"]
shape = SubResource("CircleShape2D_vbcql")

[node name="Separator" type="Sprite2D" parent="."]
modulate = Color(0.470588, 0.470588, 0.470588, 1)
position = Vector2(575, 323)
scale = Vector2(1, 1.48)
texture = ExtResource("2_1jpwc")

[node name="BackgroundTexture" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
show_behind_parent = true
position = Vector2(576.5, 326.75)
scale = Vector2(4.51172, 654.5)
texture = SubResource("GradientTexture1D_s8fq0")

[node name="Background" type="Node" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="Background"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/StaticBody2D"]
position = Vector2(574, 665)
shape = SubResource("RectangleShape2D_y4g73")

[node name="StaticBody2D2" type="StaticBody2D" parent="Background"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/StaticBody2D2"]
position = Vector2(577, -14)
shape = SubResource("RectangleShape2D_y4g73")

[node name="StaticBody2D3" type="StaticBody2D" parent="Background"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/StaticBody2D3"]
position = Vector2(1185, 318)
rotation = -2.03197
shape = SubResource("WorldBoundaryShape2D_i4w21")

[node name="StaticBody2D4" type="StaticBody2D" parent="Background"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/StaticBody2D4"]
position = Vector2(-31, 332)
shape = SubResource("WorldBoundaryShape2D_vbesr")

[node name="PlayerScore" type="Label" parent="."]
offset_left = 272.0
offset_top = 288.0
offset_right = 310.0
offset_bottom = 368.0
theme_override_colors/font_color = Color(0.470588, 0.470588, 0.470588, 1)
theme_override_fonts/font = ExtResource("7_yy80t")
theme_override_font_sizes/font_size = 100
text = "0"

[node name="ComputerScore" type="Label" parent="."]
offset_left = 848.0
offset_top = 288.0
offset_right = 924.0
offset_bottom = 368.0
theme_override_colors/font_color = Color(0.470588, 0.470588, 0.470588, 1)
theme_override_fonts/font = ExtResource("7_yy80t")
theme_override_font_sizes/font_size = 100
text = "0"

[connection signal="body_entered" from="Ball/Area2D2" to="Ball/Area2D2" method="_on_body_entered"]
